<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/touchpad_control_pref">
        <SeekBarPreference
            android:defaultValue="30"
            android:key="touchpadCursorSpeed"
            android:max="60"
            android:min="20"
            android:title="@string/touchpad_cursor_speed" />
        <ListPreference
            android:defaultValue="@string/pref_longpress_type_right_value"
            android:entries="@array/pref_touchpad_long_press_label"
            android:entryValues="@array/pref_touchpad_long_press_values"
            android:key="touchpadLongPressAction"
            android:title="@string/touchpad_longpress_action" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="touchpadEdgeWheel"
            app:defaultValue="true"
            android:title="@string/touchpad_edge_wheel"
            android:summary="@string/touchpad_edge_wheel_hint"/>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="touchpadFeedback"
            app:defaultValue="true"
            android:title="@string/touchpad_edge_wheel"/>
    </PreferenceCategory>
</PreferenceScreen>