<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <SwitchPreferenceCompat-->
<!--        android:defaultValue="false"-->
<!--        android:key="disableImmersive"-->
<!--        android:title="@string/immersive_mode_disable" />-->
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="keepScreenOn"
        android:title="@string/keep_screen_awake_enable" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="forceLandscape"
        android:title="@string/landscape_force" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="enableDebugInfo"
        android:title="@string/enable_debug_info" />

    <ListPreference
        android:entries="@array/pref_theme_mode_label"
        android:summary="@string/theme_mode_restart"
        android:entryValues="@array/pref_theme_mode_values"
        android:defaultValue="@string/pref_theme_mode_auto_value"
        android:key="themeModeType"
        android:title="@string/theme_mode" />

<!--    <SwitchPreferenceCompat-->
<!--        android:defaultValue="false"-->
<!--        android:key="leftHandedModeTag"-->
<!--        android:title="@string/left_handed_mode" />-->
<!--    <SwitchPreferenceCompat-->
<!--        android:defaultValue="false"-->
<!--        android:key="moreDebugLoggingTag"-->
<!--        android:title="@string/more_debug_logging" />-->

<!--    <SwitchPreferenceCompat-->
<!--        android:defaultValue="false"-->
<!--        android:key="doNotShowDesktopThumbnails"-->
<!--        android:title="@string/hide_connection_thumbnails" />-->

<!--    <SwitchPreferenceCompat-->
<!--        android:defaultValue="false"-->
<!--        android:key="showOnlyConnectionNicknames"-->
<!--        android:title="@string/show_only_connection_nicknames" />-->
</PreferenceScreen>